--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cli-color": "^1.1.0",
     "express": "^4.13.4"
   },
   "devDependencies": {},
