--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "vitalist",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./server"
   },
   "author": "",
   "license": "ISC",
