--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "cli-color": "^1.1.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {},
   "repository": {
