--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "d3": "^3.5.16",
     "bootstrap": "^3.3.6",
     "d3-jetpack": "*",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "moment": "^2.19.1"
   }
 }
